<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF1D7E8"
    tools:context="com.example.susanne.susannebinkhorst_pset1.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:id="@+id/Body"
            android:layout_width="370dp"
            android:layout_height="310dp"
            android:contentDescription="@string/body"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/Arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/arms" />

        <ImageView
            android:id="@+id/Ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/Eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/Eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/Glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/Hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/Mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/Nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/nose" />

        <ImageView
            android:id="@+id/Mustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/mustache" />

        <ImageView
            android:id="@+id/Shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/shoes" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:rowCount="5">

        <CheckBox
            android:id="@+id/ears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="cursive"
            android:onClick="checkboxClicked"
            android:text="@string/ears"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/nose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:onClick="checkboxClicked"
            android:text="@string/nose"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/eyes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkboxClicked"
            android:text="@string/eyes"
            android:fontFamily="cursive"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/arms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkboxClicked"
            android:text="Arms"
            android:fontFamily="cursive"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/eyebrows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkboxClicked"
            android:text="@string/eyebrows"
            android:fontFamily="cursive"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/hat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkboxClicked"
            android:text="@string/hat"
            android:fontFamily="cursive"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/mouth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkboxClicked"
            android:text="@string/mouth"
            android:fontFamily="cursive"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/glasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkboxClicked"
            android:text="@string/glasses"
            android:fontFamily="cursive"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/mustache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkboxClicked"
            android:text="@string/mustache"
            android:fontFamily="cursive"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/shoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkboxClicked"
            android:text="@string/shoes"
            android:fontFamily="cursive"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </GridLayout>

</LinearLayout>
